# cotc-tactician

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: roster.example.yaml
data/bosses/: 100npc-berecain-village-chief.yaml  100npc-hall-of-heroes-adventurer.yaml  100npc-hell-hardy-dagger-wielder.yaml  100npc-hell-hardy-dual-wielder.yaml  100npc-hell-sacred-flame-soldier.yaml  100npc-hell-stateless-princess-genna.yaml  100npc-muttering-codger.yaml  100npc-old-storyteller.yaml  100npc-once-famous-actress.yaml  100npc-taciturn-housewife.yaml  120npc-devout-priest.yaml  120npc-dignified-tutor.yaml  120npc-trained-beastman.yaml  120npc-well-trained-beastling.yaml  _example-boss.yaml  _schema.yaml  _template.yaml  adversary-120npc-cropdale-ex3.yaml  adversary-120npc-flamechurch-ex3.yaml  adversary-120npc-new-delsta-ex3.yaml  adversary-120npc-ryu-ex3.yaml  adversary-120npc-unfinished-tunnel-ex3.yaml  adversary-9s-ex3.yaml  adversary-adventurer-fox-ex1.yaml  adversary-adventurer-fox-ex2.yaml  adversary-adventurer-fox-ex3.yaml  adversary-adventurer-fox.yaml  adversary-aide-vanguard-aide-rearguard-ex1.yaml  adversary-aide-vanguard-aide-rearguard-ex2.yaml  adversary-aide-vanguard-aide-rearguard-ex3.yaml  adversary-aide-vanguard-aide-rearguard.yaml  adversary-airy-ex1.yaml  (+267 more)
docs/: csv_data_guide.md  role_assignment_guide.md
scripts/: _character_ids.py  _csv_row.py  convert_rank_comments_to_yaml.py  import_adversary_log_from_csv.py  import_characters_from_csv.py  import_skills_from_markdown.py  merge_character_stats_from_csv.py
src/: __init__.py  data_loader.py  main.py  mcp_server.py  models.py  pipeline.py  prompts.py  retrieval.py  roster.py  team_guide.py  vector_store.py
tests/: test_import_helpers.py  test_retrieval.py  test_roster.py  test_roster_ui.py  test_smoke.py  test_team_guide.py
(+344 files in other folders)
