[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cotc-tactician"
version = "0.1.0"
description = "AI-powered team composition assistant for Octopath Traveler: Champions of the Continent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "COTC Tactician Contributors"}
]
keywords = ["cotc", "octopath", "team-composition", "ai", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.12.0"]
ollama = ["ollama>=0.1.7"]
all = [
    "openai>=1.12.0",
    "ollama>=0.1.7",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.9.0",
]

[project.scripts]
cotc-tactician = "src.main:main"

[project.urls]
"Homepage" = "https://github.com/example/cotc-tactician"
"Bug Tracker" = "https://github.com/example/cotc-tactician/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    ".vectordb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
# Keep Ruff defaults; explicitly declare to make formatter usage obvious.
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
